# tickertrail

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  prompts.md  pyproject.toml
data/: index_constituents.csv  nse_equity_list.csv
scripts/: run_tests.py
src/tickertrail/: cli.py  conf.json  market_hours.py  price_history.py  quote_tools.py  snapshot_service.py  timeframe.py  views.py
src/tickertrail.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli_branches.py  test_cli_cache_command.py  test_cli_commands.py  test_cli_parsing.py  test_cli_quote_behaviors.py  test_price_history_cache.py
